--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -55,34 +55,39 @@
                                 </thead>
                                 <tbody>
                                     {% for form_pret in formset %}
-                                        <tr>
-                                            <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.numero %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_date.html" with form_input=form_pret.date_octroi %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form_pret.duree %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form_pret.montant step="0.01" %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/select_enum.html" with form_input=form_pret.preteur enum=preteurs %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_text.html" with form_input=form_pret.autre %}
-                                            </td>
-                                            {% if convention.statut != 'BROUILLON' %}
-                                                {% with input_id="pret_"|add:form_pret.uuid.value object_field="pret__uuid__"|add:form_pret.uuid.value %}
+                                        {% with main_object_field="pret__uuid__"|add:form_pret.uuid.value %}
+                                            <tr>
+                                                <td>
+                                                    <input
+                                                        type="hidden"
+                                                        id="{{form_pret.uuid.id_for_label}}"
+                                                        name="{{form_pret.uuid.html_name}}"
+                                                        value="{{ form_pret.uuid.value|default_if_none:'' }}">
+                                                    {% include "common/form/input_text.html" with form_input=form_pret.numero parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_date.html" with form_input=form_pret.date_octroi parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_number.html" with form_input=form_pret.duree parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_number.html" with form_input=form_pret.montant step="0.01" parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/select_enum.html" with form_input=form_pret.preteur enum=preteurs parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_text.html" with form_input=form_pret.autre parent_object_field=main_object_field %}
+                                                </td>
+                                                {% if convention.statut != 'BROUILLON' %}
                                                     <td id="{{form_pret.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input_id=form_pret.uuid.id_for_label object_field=object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input_id=form_pret.uuid.id_for_label form_input_html=form_pret.uuid.html_name convention=convention object_field=object_field comments=comments %}
+                                                        {% include "common/comment_icon.html" with form_input_id=form_pret.uuid.id_for_label object_field=main_object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form_pret.uuid.id_for_label form_input_html=form_pret.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
                                                     </td>
-                                                {% endwith %}
-                                            {% endif %}
-                                        </tr>
+                                                {% endif %}
+                                            </tr>
+                                        {% endwith %}
                                     {% endfor %}
                                 </tbody>
                             </table>
@@ -111,7 +116,7 @@
                                                         class="fr-select {% if form.annee_fin_conventionnement.errors %}fr-select--error{% endif %}"
                                                         id="{{form.annee_fin_conventionnement.id_for_label}}"
                                                         name="{{form.annee_fin_conventionnement.html_name}}"
-                                                        {% if not editable %}disabled{% endif %}>
+                                                        {% include "common/form/disable_form_input.html" with object_field="convention__annee_fin_conventionnement__"|add:form.uuid.value %}>
                                                         <option value="" {% if not form.annee_fin_conventionnement.value %}selected{% endif %} disabled hidden>Année</option>
                                                         {% for year in years %}
                                                             <option value="{{year}}"
