--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -61,34 +61,39 @@
                                 </thead>
                                 <tbody>
                                     {% for form in formset %}
-                                        <tr>
-                                            <td>
-                                                {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_text.html" with form_input=form.logement_designation %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/select_enum.html" with form_input=form.logement_typologie enum=logement_typologies %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.surface_hors_surface_retenue step="0.01" %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.loyer_par_metre_carre step="0.01" %}
-                                            </td>
-                                            <td>
-                                                {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" %}
-                                            </td>
-                                            {% if convention.statut != 'BROUILLON' %}
-                                                {% with input_id="annexe_"|add:form.uuid.value object_field="annexe__uuid__"|add:form.uuid.value %}
+                                        {% with main_object_field="annexe__uuid__"|add:form.uuid.value %}
+                                            <tr>
+                                                <td>
+                                                    <input
+                                                        type="hidden"
+                                                        id="{{form.uuid.id_for_label}}"
+                                                        name="{{form.uuid.html_name}}"
+                                                        value="{{ form.uuid.value|default_if_none:'' }}">
+                                                    {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_text.html" with form_input=form.logement_designation parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/select_enum.html" with form_input=form.logement_typologie enum=logement_typologies parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_number.html" with form_input=form.surface_hors_surface_retenue step="0.01" parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_number.html" with form_input=form.loyer_par_metre_carre step="0.01" parent_object_field=main_object_field %}
+                                                </td>
+                                                <td>
+                                                    {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" parent_object_field=main_object_field %}
+                                                </td>
+                                                {% if convention.statut != 'BROUILLON' %}
                                                     <td id="{{form.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input_id=form.uuid.id_for_label object_field=object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
+                                                        {% include "common/comment_icon.html" with form_input_id=form.uuid.id_for_label object_field=main_object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form.uuid.id_for_label form_input_html=form.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
                                                     </td>
-                                                {% endwith %}
-                                            {% endif %}
-                                        </tr>
+                                                {% endif %}
+                                            </tr>
+                                        {% endwith %}
                                     {% endfor %}
                                 </tbody>
                             </table>
