manage stationnements update after comments

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -546,6 +546,9 @@
                                                         <th scope="col" class="col__width--150">Type de stationnement {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--200">Nombre de staionnements {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--150">Loyer maximum en € {% include "common/mandatory_field_star.html" %}</th>
+                                                        {% if convention.statut != 'BROUILLON' %}
+                                                            <th scope="col">Comments</th>
+                                                        {% endif %}
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -560,6 +563,16 @@
                                                             <td>
                                                                 {{ stationnement.loyer|floatformat:2 }}
                                                             </td>
+                                                            {% if convention.statut != 'BROUILLON' %}
+                                                                {% with stationnement_uuid=stationnement.uuid|slugify %}
+                                                                    {% with main_object_field="type_stationnement__uuid__"|add:stationnement_uuid %}
+                                                                        <td id="{{main_object_field}}_div">
+                                                                            {% include "common/comment_icon.html" with form_input_id=main_object_field object_field=main_object_field comments=comments small=True %}
+                                                                            {% include "common/comment_dialog.html" with form_input_id=main_object_field form_input_html=main_object_field convention=convention object_field=main_object_field comments=comments %}
+                                                                        </td>
+                                                                    {% endwith %}
+                                                                {% endwith %}
+                                                            {% endif %}
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
